<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/card"
    android:layout_height="match_parent"
    tools:context=".ui.DetailFragment">

    <ImageView
        android:contentDescription="@string/imagem_pizza"
        android:id="@+id/imagePizzaDetail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

    <TextView
        android:id="@+id/namePizzaDetail"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/icon_stars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp" />

    <ImageView
        android:contentDescription="@string/icone_de_estrelas"
        android:id="@+id/iconStarsPizzaDetail"
        android:layout_width="89dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="13dp"
        android:layout_gravity="start"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/ic_stars"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/escolha_tamanho"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="402dp">

        <Button
            android:id="@+id/buttonPizzaDetailP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/radius_input"
            android:text="@string/tamanho_p" />

        <Button
            android:id="@+id/buttonPizzaDetailM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/radius_input"
            android:text="@string/tamanho_m" />

        <Button
            android:id="@+id/buttonPizzaDetailG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/radius_input"
            android:text="@string/tamanho_g" />


    </LinearLayout>

        <TextView
            android:textSize="24sp"
            android:id="@+id/valuePizzaDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginVertical="28dp"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/button2"
            android:background="@color/green"
            android:text="@string/comprar"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>

